trying to fix jumping animaton on safari...

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ div#home {
   top: 40px;
 }
 
-#d1, #d2, #d3, #d4{
+/* #d1, #d2, #d3, #d4{
   /* TRANSITION on div with pictures */
   /* -webkit-perspective: 1000;
   -webkit-backface-visibility: hidden; */
@@ -61,7 +61,7 @@ div#home {
    -moz-transition: background-image 1s ease-in-out;
    -o-transition: background-image 1s ease-in-out;
    transition: background-image 1s ease-in-out; */
-}
+} */
 
 #d1{
   height: 200px;
